--- a/imgEditor/pubspec.yaml
+++ b/imgEditor/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   signature: ^3.0.0
   dotted_border: ^1.0.5
   flutter_colorpicker: ^0.3.2
+  image_cropper: ^1.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
